sfdx-source/packaged/objects/Project__c/fields/PlannedEndDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedEndDate__c</fullName>
    <description>The planned date, where this project is scheduled to be finished</description>
    <inlineHelpText>The planned date, where this project is scheduled to be finished</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>