sfdx-source/packaged/objects/Project__c/fields/PlannedStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedStartDate__c</fullName>
    <description>The planned date, where this project is scheduled to start</description>
    <inlineHelpText>The planned date, where this project is scheduled to start</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>