sfdx-source/packaged/objects/Project__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <description>Internal Project auto-number field to generate unique easy-to-reference id for projects</description>
    <displayFormat>{YYYY}-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Automatically generated id</inlineHelpText>
    <label>Project Number</label>
    <type>AutoNumber</type>
</CustomField>